# service-daemon

./: .gitignore  .travis.yml  Cargo.toml  README.md  service-daemon.service  test_credentials.txt
.github/workflows/: build.yml
config/: .gitignore  default.toml  template.toml
examples/: README.txt  crash_backoff.rs  mass_io.rs  ping.rs  sec_env.rs  test_io.rs
frontend/: npm-shrinkwrap.json  package.json  update_dependecies.txt
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  index.js  login-context.js  user-context.js
frontend/src/components/: error.js  loading-button.js  loading.js  output.css  output.js
frontend/src/lib/: Api.js  time.js
frontend/src/views/: io.js  log-details.js  login.js  logout.js  new_user.js  overview.js  service.js  settings.js  user.js  users.js
src/: crypto.rs  main.rs  messages.rs  readline.rs  service.rs  settings.rs  stdin_writer.rs
src/db/: local.rs  mod.rs  models.rs
src/handler/: error.rs  messages.rs  mod.rs  service.rs  user.rs
src/web/: api.rs  mod.rs  models.rs
tests/: double_id.toml  double_id.valid.toml
