[package]
name = "service-daemon"
version = "0.3.0"
authors = ["Aron Heinecke <aron.heinecke@t-online.de>"]
edition = "2018"
description = "Daemon to remotely control services"
license = "MPL-2.0"

[profile.release]
lto = true

[features]
default = ["local"]

local = ["sled","bincode"]
remote = ["mysql"]

[dependencies]
actix = "0.9"
actix-web = "2"
actix-rt = "1"
actix-files = "0.2"
actix-identity = "0.2"
actix-threadpool = "0.3"
nanoid = "0.4"
config = "0.11"
data-encoding = "2"
oath = "0.10"
bcrypt = "0.10"
mysql = {version = "21", optional = true }
sled = {version = "0.31", optional = true }
bincode = {version = "1", optional = true }
strip-ansi-escapes = "0.1"
failure = "0.1"
serde = {features = ["derive"], version = "1" }
log = "0.4"
env_logger = "0.9"
metrohash = "1"
arraydeque = "0.4"
futures = "0.3"
futures-util = "0.3"
lazy_static = "1"
rand = "0.8"
bitflags = "1"
chrono = "0.4"
clap = "2"

[dependencies.tokio]
version = "0.2"
features = ["sync","process","io-util","macros","time"]

[target.'cfg(unix)'.dependencies]
sysexit = "0.2"

[dev-dependencies]
toml = "0.5"
tempfile = "3"